# LimePipeline

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  test_force_reanalysis.py
.cursor/rules/: 00-architecture-and-invariants.mdc  core-boundaries.mdc  limepipelinerules.mdc  ops-operators.mdc  pr-checklist.mdc  scene-helpers.mdc  templates.mdc  ui-panels.mdc  ui-toolbox.mdc
docs/: contribuir.md  index.md
docs/arquitectura/: vision-general.md
docs/catalogo/: __init__.py.md  core.md  data.md  index.md  ops.md  prefs.py.md  props.py.md  props_ai_assets.py.md  props_ai_materials.py.md  props_ai_renders.py.md  scene.md  ui.md
lime_pipeline/: __init__.py  __init__.py.bak  generalrules.md  naming.py  ops_backup.py  ops_create_file.py  ops_folders.py  ops_select_root.py  ops_tooltips.py  paths.py  prefs.py  props.py  props_ai_assets.py  props_ai_materials.py  props_ai_renders.py  props_ai_textures.py  scan.py  ui.py  validate.py
tests/: test_ai_asset_collection_paths.py  test_ai_asset_material_rules.py  test_ai_asset_prompt.py  test_ai_asset_response.py  test_anim_output_paths.py  test_asset_naming.py  test_collection_resolver.py  test_env_config.py  test_material_quality.py  test_material_taxonomy.py  test_openrouter_client.py  test_project_root_inference.py  test_texture_naming.py  test_texture_paths.py  test_texture_workspace.py
tools/: blender5_smoke_validate.py  blender_dev_reload_http.py  blender_dev_start.py  catalog.json  generate_catalog.py  launch_blender5_interactive.py
(+158 files in other folders)
